--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,18 @@
     </div>
   </div>
   
+  <!-- Compliance Footer -->
+  <footer style="background: var(--surface); border-top: 1px solid var(--border); padding: 20px; text-align: center; margin-top: 40px;">
+    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; font-size: 12px; color: var(--text-dim);">
+      <a href="privacy-policy.html" style="color: var(--teal); text-decoration: none;">Privacy Policy</a>
+      <a href="terms-of-service.html" style="color: var(--teal); text-decoration: none;">Terms of Service</a>
+      <a href="refund-policy.html" style="color: var(--teal); text-decoration: none;">Refund Policy</a>
+    </div>
+    <div style="margin-top: 10px; font-size: 11px; color: var(--text-dim);">
+      © 2026 The Light Park. All rights reserved.
+    </div>
+  </footer>
+
   <script>
     // Splash screen
     setTimeout(() => document.getElementById('splash').classList.add('hidden'), 1500);
